# automl

./: .gitignore  Dockerfile  Makefile  README.md  __init__.py  docker-compose.yml  pyproject.toml  pytest.ini  task_store.py
.streamlit/: config.toml
api/: run_api.py  run_server.py  session_manager.py
automl/: adaptive_lr.py  advanced_selector.py  candidate_selector.py  jit_encoder_selector.py  meta_learning.py  model_selector.py  optuna_adaptive.py  trainer.py  trial_intelligence.py
config/: encoder_plugins.py  hyperparameters.py  lora_defaults.py  paths.py  ula_defaults.py
core/: __init__.py  context_enforcer.py  execution_context.py  orchestrator.py  types.py
data_ingestion/: __init__.py  dataset_object.py  ingestion_manager.py  integrator.py  loader.py  modality_encoder.py  sampling.py  schema.py  schema_detector.py  semantic_analyzer.py  target_validator.py  xs3_target_selector.py
database/: __init__.py  context_db.py
frontend/: _advanced_panels.py  _endpoints.py  _help.py  app_enhanced.py
guardrails/: __init__.py  ewc.py  fallback_manager.py  latency_guard.py  memory_guard.py  session_isolator.py
modelss/: __init__.py  fusion.py  heads.py  multimodal_alignment.py  predictor.py
monitoring/: drift_detector.py  performance_tracker.py
pipeline/: __init__.py  calibration.py  compute_tracker.py  drift_adapter.py  embedding_cache.py  evaluation.py  experiment_engine.py  inference_engine.py  label_noise_detector.py  monitoring.py  representation_layer.py  research_metrics.py  retrain_executor.py  retraining_orchestrator.py  retraining_pipeline.py  state.py  training_orchestrator.py  xai_engine.py
preprocessing/: adaptive_engine.py  image_preprocessor.py  preprocessing_planner.py  tabular_preprocessor.py  text_preprocessor.py  validator.py
registry/: __init__.py  model_registry.py
research/: ablation.py  experiment_collector.py  paper_generator.py  paper_service.py  plots.py
scripts/: _generate_paper.py  _verify.py  aggregate_results.py  generate_plots.py  run_ablations.py  run_baselines.py  (+5 more)
(+52 files in other folders)
