[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "apex-automl"
version = "2.0.0"
description = "APEX: Unified Semantic-Aware Multimodal AutoML System"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

# ===========================================================================
# Pinned versions — frozen from development environment 2026-04-23
# Change '>=' in requirements.txt to '==' here for reproducibility.
# Override with APEX_SEED env var for seeded training.
# ===========================================================================
dependencies = [
    # Core Deep Learning
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchmetrics>=1.0.0",
    "pytorch-lightning==2.6.1",

    # Transformers & NLP
    "transformers==4.49.0",

    # Computer Vision
    "pillow>=10.0.0",

    # Machine Learning & Data Science
    "scikit-learn==1.8.0",
    "pandas==2.2.3",
    "numpy==2.2.3",
    "scipy>=1.10.0",
    "polars>=0.20.0",

    # Hyperparameter Optimization & Experiment Tracking
    "optuna==4.7.0",
    "mlflow>=2.10.0",

    # Explainability (XAI)
    "captum>=0.7.0,<0.8.0",

    # Scalable Data Loading (optional)
    "dask[dataframe]>=2023.1.0",

    # API & Web Framework
    "fastapi==0.128.2",
    "uvicorn[standard]>=0.23.0",
    "pydantic==2.12.5",
    "python-multipart>=0.0.6",

    # Frontend & Visualization
    "streamlit==1.54.0",
    "altair>=5.0.0",

    # Data Storage & Serialization
    "joblib>=1.3.0",

    # HTTP Requests
    "requests>=2.31.0",
    "aiohttp>=3.8.0",

    # Utilities
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]
baselines = [
    "xgboost>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
